--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -2,15 +2,14 @@ pull_request_rules:
   - name: Automatic merge on approval
     conditions:
       - label=ready-to-merge
-      - check-success=build
+      - check-success=build_and_test
     actions:
       merge:
         method: squash
-        commit_message: title+body
   - name: Automatic merge for Dependabot pull requests
     conditions:
       - author=dependabot[bot]
-      - check-success=build
+      - check-success=build_and_test
     actions:
       merge:
         method: squash
