--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -2,14 +2,14 @@ pull_request_rules:
   - name: Automatic merge on approval
     conditions:
       - label=ready-to-merge
-      - check-success=build_and_test
+      - check-success=Build and test
     actions:
       merge:
         method: squash
   - name: Automatic merge for Dependabot pull requests
     conditions:
       - author=dependabot[bot]
-      - check-success=build_and_test
+      - check-success=Build and test
     actions:
       merge:
         method: squash
