--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,11 +8,9 @@ on:
 
 jobs:
   build_and_test:
-    runs-on: ubuntu-20.04
+    name: Build and test
 
-    strategy:
-      matrix:
-        node-version: ['16']
+    runs-on: ubuntu-20.04
 
     steps:
       - name: Checkout
@@ -21,7 +19,7 @@ jobs:
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 16
 
       - name: Install dependencies
         run: npm ci
