--- a/package.json
+++ b/package.json
@@ -52,9 +52,9 @@
     "eslint-config-airbnb-typescript": "16.1.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-import": "2.25.4",
-    "husky": "^7.0.4",
+    "husky": "7.0.4",
     "jest": "27.4.7",
-    "lint-staged": "^12.1.3",
+    "lint-staged": "12.1.7",
     "msw": "0.36.4",
     "prettier": "2.5.1",
     "rollup": "2.63.0",
