--- a/renovate.json
+++ b/renovate.json
@@ -1,10 +1,8 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:base",
-    "group:all",
-    "schedule:weekly",
-    ":disablePeerDependencies"
-  ],
-  "automerge": true
+  "extends": ["config:base", "group:all", "schedule:weekly", ":disablePeerDependencies"],
+  "automerge": true,
+  "lockFileMaintenance": {
+    "enabled": true
+  }
 }
