--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,7 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:base", "group:all", "schedule:weekly", ":disablePeerDependencies"],
+  "commitMessagePrefix": "build(deps):",
   "automerge": true,
   "lockFileMaintenance": {
     "enabled": true
