--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,9 +8,11 @@ on:
 
 jobs:
   build_and_test:
-    name: Build and test
-
     runs-on: ubuntu-20.04
+    strategy:
+      matrix:
+        node: [16, 18]
+    name: Build and test (Node.js ${{ matrix.node }})
 
     steps:
       - name: Checkout
@@ -19,7 +21,7 @@ jobs:
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3.5.1
         with:
-          node-version: 16
+          node-version: ${{ matrix.node }}
 
       - name: Install dependencies
         run: npm ci
