refactor: use vitest instead of jest

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,7 +35,7 @@
     "import/no-extraneous-dependencies": [
       "error",
       {
-        "devDependencies": ["src/**/*.spec.ts", "src/mocks/**/*.ts", "*.config.ts"]
+        "devDependencies": ["src/**/*.spec.ts", "src/mocks/**/*.ts", "*.config.ts", "test.setup.ts"]
       }
     ],
 
