--- a/package.json
+++ b/package.json
@@ -36,13 +36,12 @@
     "format:fix": "prettier --write src",
     "lint:check": "eslint src --cache",
     "lint:fix": "eslint src --cache --fix",
-    "test": "jest",
-    "test:coverage": "npm test -- --coverage"
+    "test": "vitest run"
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "11.1.2",
+    "@swc/core": "1.3.69",
     "@tsconfig/node16": "16.1.0",
-    "@types/jest": "29.5.3",
     "@types/node": "18.16.19",
     "@typescript-eslint/eslint-plugin": "6.0.0",
     "@typescript-eslint/parser": "6.0.0",
@@ -53,16 +52,14 @@
     "eslint-config-prettier": "8.8.0",
     "eslint-plugin-import": "2.27.5",
     "husky": "8.0.3",
-    "jest": "29.6.1",
     "lint-staged": "13.2.3",
     "msw": "1.2.2",
     "prettier": "3.0.0",
     "rollup": "3.26.2",
     "rollup-plugin-dts": "5.3.0",
     "rollup-plugin-esbuild": "5.0.0",
-    "ts-jest": "29.1.1",
-    "ts-node": "10.9.1",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "vitest": "0.33.0"
   },
   "peerDependencies": {
     "axios": "~0.24.0",
