--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   ],
   "scripts": {
     "prepare": "husky install",
-    "build": "rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript",
+    "build": "rollup --config rollup.config.js --configPlugin @rollup/plugin-typescript",
     "format:check": "prettier --check src",
     "format:fix": "prettier --write src",
     "lint:check": "eslint src --cache",
@@ -41,7 +41,7 @@
   "devDependencies": {
     "@rollup/plugin-typescript": "11.1.2",
     "@swc/core": "1.3.69",
-    "@tsconfig/node16": "16.1.0",
+    "@tsconfig/node18": "18.2.0",
     "@types/node": "18.16.19",
     "@typescript-eslint/eslint-plugin": "6.0.0",
     "@typescript-eslint/parser": "6.0.0",
