--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,15 +8,15 @@ on:
 
 jobs:
   build_and_test:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     strategy:
       matrix:
-        node: [16, 18]
+        node: [16, 18, 20]
     name: Build and test (Node.js ${{ matrix.node }})
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3.5.3
 
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3.7.0
@@ -33,7 +33,7 @@ jobs:
         run: npm run format:check
 
       - name: Test
-        run: npm run test:coverage
+        run: npm run test
 
       - name: Build
         run: npm run build
