--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,16 +17,16 @@ jobs:
   release:
     name: Release
 
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3.5.3
 
       - name: Use Node.js 16
         uses: actions/setup-node@v3.7.0
         with:
-          node-version: 16
+          node-version-file: '.nvmrc'
           registry-url: 'https://registry.npmjs.org'
 
       - name: Install dependencies
@@ -39,7 +39,7 @@ jobs:
         run: npm run format:check
 
       - name: Test
-        run: npm run test:coverage
+        run: npm run test
 
       - name: Bump the package version
         run: |
