--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,7 +35,7 @@
     "import/no-extraneous-dependencies": [
       "error",
       {
-        "devDependencies": ["src/**/*.spec.ts", "src/mocks/**/*.ts", "*.config.ts"]
+        "devDependencies": ["src/**/*.spec.ts", "src/mocks/**/*.ts", "*.config.*", "test.setup.ts"]
       }
     ],
 
@@ -46,7 +46,7 @@
   },
   "overrides": [
     {
-      "files": "*.config.ts",
+      "files": "*.config.*",
       "rules": {
         "import/no-default-export": "off"
       }
