--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3.5.3
 
-      - name: Use Node.js 16
+      - name: Use Node.js
         uses: actions/setup-node@v3.7.0
         with:
           node-version-file: '.nvmrc'
