--- a/package.json
+++ b/package.json
@@ -2,8 +2,27 @@
   "name": "axios-fp-io-ts",
   "version": "1.0.0",
   "description": "A wrapper around axios which uses io-ts to validate the received response.",
-  "main": "lib/index.js",
+  "type": "module",
+  "source": "src/index.ts",
+  "exports": {
+    ".": {
+      "require": {
+        "types": "./lib/index.d.cts",
+        "default": "./lib/index.cjs"
+      },
+      "import": {
+        "types": "./lib/index.d.ts",
+        "default": "./lib/index.js"
+      },
+      "types": "./lib/index.d.ts",
+      "default": "./lib/index.js"
+    },
+    "./package.json": "./package.json"
+  },
   "types": "lib/index.d.ts",
+  "main": "./lib/index.cjs",
+  "module": "./lib/index.js",
+  "unpkg": "./lib/index.umd.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/xballoy/axios-fp-io-ts.git"
@@ -31,7 +50,7 @@
   ],
   "scripts": {
     "prepare": "husky install",
-    "build": "rollup --config rollup.config.js --configPlugin @rollup/plugin-typescript",
+    "build": "microbundle",
     "format:check": "prettier --check src",
     "format:fix": "prettier --write src",
     "lint:check": "eslint src --cache",
@@ -39,13 +58,11 @@
     "test": "vitest run"
   },
   "devDependencies": {
-    "@rollup/plugin-typescript": "11.1.2",
     "@swc/core": "1.3.70",
     "@tsconfig/node18": "18.2.0",
     "@types/node": "18.17.0",
     "@typescript-eslint/eslint-plugin": "6.1.0",
     "@typescript-eslint/parser": "6.1.0",
-    "esbuild": "0.18.16",
     "eslint": "8.45.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-airbnb-typescript": "17.1.0",
@@ -53,11 +70,9 @@
     "eslint-plugin-import": "2.27.5",
     "husky": "8.0.3",
     "lint-staged": "13.2.3",
+    "microbundle": "0.15.1",
     "msw": "1.2.3",
     "prettier": "3.0.0",
-    "rollup": "3.26.3",
-    "rollup-plugin-dts": "5.3.0",
-    "rollup-plugin-esbuild": "5.0.0",
     "typescript": "5.1.6",
     "vitest": "0.33.0"
   },
