build: fix msw breaking changes

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-22.04
     strategy:
       matrix:
-        node: [16, 18, 20]
+        node: [18, 20]
     name: Build and test (Node.js ${{ matrix.node }})
 
     steps:
