--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,10 +9,7 @@ on:
 jobs:
   build_and_test:
     runs-on: ubuntu-22.04
-    strategy:
-      matrix:
-        node: [18, 20]
-    name: Build and test (Node.js ${{ matrix.node }})
+    name: Build and test
 
     steps:
       - name: Checkout
@@ -21,7 +18,7 @@ jobs:
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@60edb5dd545a775178f52524783378180af0d1f8 # v4.0.2
         with:
-          node-version: ${{ matrix.node }}
+          node-version-file: '.nvmrc'
 
       - name: Install dependencies
         run: npm ci
