--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,11 +32,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Lint
-        run: npm run lint:check
-
-      - name: Format
-        run: npm run format:check
+      - name: Code quality
+        run: npx @biomejs/biome ci src
 
       - name: Test
         run: npm run test
