--- a/package.json
+++ b/package.json
@@ -3,26 +3,18 @@
   "version": "2.1.2",
   "description": "A wrapper around axios which uses io-ts to validate the received response.",
   "type": "module",
-  "source": "src/index.ts",
+  "types": "./dist/index.d.ts",
+  "browser": "./dist/index.iife.js",
+  "module": "./dist/index.js",
+  "main": "./dist/index.cjs",
   "exports": {
     ".": {
-      "require": {
-        "types": "./lib/index.d.cts",
-        "default": "./lib/index.cjs"
-      },
-      "import": {
-        "types": "./lib/index.d.ts",
-        "default": "./lib/index.js"
-      },
-      "types": "./lib/index.d.ts",
-      "default": "./lib/index.js"
-    },
-    "./package.json": "./package.json"
+      "types": "./dist/index.d.ts",
+      "browser": "./dist/index.iife.js",
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
+    }
   },
-  "types": "lib/index.d.ts",
-  "main": "./lib/index.cjs",
-  "module": "./lib/index.js",
-  "unpkg": "./lib/index.umd.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/xballoy/axios-fp-io-ts.git"
@@ -47,7 +39,7 @@
   "homepage": "https://github.com/xballoy/axios-fp-io-ts#readme",
   "files": ["lib"],
   "scripts": {
-    "build": "microbundle",
+    "build": "tsup src/index.ts --format esm,cjs,iife --dts",
     "format:check": "biome format src",
     "format:fix": "biome format --write src",
     "lint:check": "biome lint src",
@@ -60,8 +52,8 @@
     "@tsconfig/node20": "20.1.4",
     "@types/node": "22.13.10",
     "lefthook": "1.11.3",
-    "microbundle": "0.15.1",
     "msw": "2.7.3",
+    "tsup": "8.4.0",
     "typescript": "5.8.2",
     "vitest": "3.0.8"
   },
