--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "axios-fp-io-ts",
-  "version": "2.1.2",
+  "version": "3.0.0",
   "description": "A wrapper around axios which uses io-ts to validate the received response.",
   "type": "module",
   "types": "./dist/index.d.ts",
@@ -37,7 +37,9 @@
     "url": "https://github.com/xballoy/axios-fp-io-ts/issues"
   },
   "homepage": "https://github.com/xballoy/axios-fp-io-ts#readme",
-  "files": ["lib"],
+  "files": [
+    "lib"
+  ],
   "scripts": {
     "build": "tsup src/index.ts --format esm,cjs,iife --dts",
     "format:check": "biome format src",
