--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,5 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["github>xballoy/renovate-config"]
+  "extends": ["github>xballoy/renovate-config"],
+  "enabled": false
 }
